--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Landing Page</title>
 </head>
 <body>
-    
+    <div class="header"></div>
+    <div class="section-one"></div>
+    <div class="section-two"></div>
+    <div class="section-three"></div>
+    <div class="section-four"></div>
+    <div class="footer"></div>
 </body>
 </html>
