--- a/index.html
+++ b/index.html
@@ -6,8 +6,23 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <div class="header"></div>
-    <div class="section-one"></div>
+    <div class="header">
+       <div class="logo">Header Logo</div>
+        <ul class="links">
+            <li><a href="google.com">header link one</a></li>
+            <li><a href="google.com">header link two</a></li>
+            <li><a href="google.com">header link three</a></li>
+        </ul>
+    </div>
+    <div class="section-one">
+        <div class="Hero">
+            <div class="Hero-Main">This website is awesome</div>
+            <div class="Hero-Secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+            <button>Sign up</button>
+        </div>
+
+
+    </div>
     <div class="section-two"></div>
     <div class="section-three"></div>
     <div class="section-four"></div>
