--- a/index.html
+++ b/index.html
@@ -15,15 +15,33 @@
         </ul>
     </div>
     <div class="section-one">
-        <div class="Hero">
-            <div class="Hero-Main">This website is awesome</div>
-            <div class="Hero-Secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+        <div class="hero">
+            <div class="hero-main">This website is awesome</div>
+            <div class="hero-secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
             <button>Sign up</button>
         </div>
-
-
+        <div class="hero-image">
+            <img src="" alt="">
+        </div>
     </div>
-    <div class="section-two"></div>
+    <div class="section-two">
+        <div class="info">
+        <img src="" alt="">
+        <div class="text">this is some subtext under an illustration or image</div>
+      </div>
+      <div class="info">
+        <img src="" alt="">
+        <div class="text">this is some subtext under an illustration or image</div>
+      </div>
+      <div class="info">
+        <img src="" alt="">
+        <div class="text">this is some subtext under an illustration or image</div>
+      </div>
+      <div class="info">
+        <img src="" alt="">
+        <div class="text">this is some subtext under an illustration or image.</div>
+      </div>
+    </div>
     <div class="section-three"></div>
     <div class="section-four"></div>
     <div class="footer"></div>
