--- a/index.html
+++ b/index.html
@@ -25,22 +25,25 @@
         </div>
     </div>
     <div class="section-two">
-        <div class="info">
-        <img src="" alt="">
-        <div class="text">this is some subtext under an illustration or image</div>
-      </div>
-      <div class="info">
-        <img src="" alt="">
-        <div class="text">this is some subtext under an illustration or image</div>
-      </div>
-      <div class="info">
-        <img src="" alt="">
-        <div class="text">this is some subtext under an illustration or image</div>
-      </div>
-      <div class="info">
-        <img src="" alt="">
-        <div class="text">this is some subtext under an illustration or image.</div>
-      </div>
+        <div class="title">Information!</div>
+        <div class="info-container">
+            <div class="info">
+                <img src="" alt="">
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <img src="" alt="">
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <img src="" alt="">
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <img src="" alt="">
+                <div class="text">this is some subtext under an illustration or image.</div>
+            </div>
+        </div>
     </div>
     <div class="section-three"></div>
     <div class="section-four"></div>
