--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </div>
     <div class="section-two">
-        <div class="title">Information!</div>
+        <div class="title">Some random information.</div>
         <div class="info-container">
             <div class="info">
                 <img src="" alt="">
@@ -45,7 +45,10 @@
             </div>
         </div>
     </div>
-    <div class="section-three"></div>
+    <div class="section-three">
+        <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+        <div class="quote-by">-Thor, God of Thunder</div>
+    </div>
     <div class="section-four"></div>
     <div class="footer"></div>
 </body>
