--- a/index.html
+++ b/index.html
@@ -49,7 +49,17 @@
         <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
         <div class="quote-by">-Thor, God of Thunder</div>
     </div>
-    <div class="section-four"></div>
-    <div class="footer"></div>
+    <div class="section-four">
+        <div class="modal">
+            <div class="modal-container">
+                <div class="modal-header">Call to action! It's time!</div>
+                <div class="modal-text">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <button class="modal-button">Sign up</button>
+        </div>
+    </div>
+    <div class="footer">
+        Copyright © The Odin Project 2024 
+    </div>
 </body>
 </html>
