--- a/index.html
+++ b/index.html
@@ -28,20 +28,28 @@
         <div class="title">Some random information.</div>
         <div class="info-container">
             <div class="info">
-                <img src="" alt="">
+                <div class="info-card">
+                    <img src="" alt="">
+                </div>
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="info">
-                <img src="" alt="">
+                <div class="info-card">
+                    <img src="" alt="">
+                </div>
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="info">
-                <img src="" alt="">
+                <div class="info-card">
+                    <img src="" alt="">
+                </div>
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="info">
-                <img src="" alt="">
-                <div class="text">this is some subtext under an illustration or image.</div>
+                <div class="info-card">
+                    <img src="" alt="">
+                </div>
+                <div class="text">this is some subtext under an illustration or image</div>
             </div>
         </div>
     </div>
