edited section one to show an outline box in css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <button class="hero-button">Sign up</button>
         </div>
         <div class="hero-image">
-            <img src="" alt="">
+            <img src="" alt="a woman looking impressed">
         </div>
     </div>
     <div class="section-two">
