--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <button class="hero-button">Sign up</button>
         </div>
         <div class="hero-image">
-            <img src="" alt="a woman looking impressed">
+            <div class="placeholder">this is a placeholder for an image</div>
         </div>
     </div>
     <div class="section-two">
